# graphviz2drawio

./: .coveragerc  .deepsource.toml  .gitattributes  .gitignore  .readthedocs.yml  .semgrep.yml  .travis.yml  .typos.toml  MANIFEST.in  Makefile  PATCHES.md  Pipfile  README.md  generate_specs.sh  pyproject.toml  requirements.txt  setup.py  test.py  test_specs.sh
.claude/skills/compare-render/: SKILL.md
.claude/skills/compare-render-workspace/iteration-1/arrowhead-bug-triage/: eval_metadata.json
.claude/skills/compare-render-workspace/iteration-1/arrowhead-bug-triage/with_skill/: timing.json
.claude/skills/compare-render-workspace/iteration-1/arrowhead-bug-triage/with_skill/outputs/: report.md
.claude/skills/compare-render-workspace/iteration-1/cluster-fidelity-investigation/: eval_metadata.json
.claude/skills/compare-render-workspace/iteration-1/cluster-fidelity-investigation/with_skill/: timing.json
.claude/skills/compare-render-workspace/iteration-1/cluster-fidelity-investigation/without_skill/: timing.json
.claude/skills/compare-render-workspace/iteration-1/polyline-regression-check/: eval_metadata.json
.claude/skills/compare-render-workspace/iteration-1/polyline-regression-check/with_skill/: timing.json
.claude/skills/compare-render-workspace/iteration-1/polyline-regression-check/without_skill/: timing.json
.claude/skills/compare-render/evals/: evals.json
.codex/skills/compare-render/: SKILL.md
.codex/skills/compare-render/agents/: openai.yaml
.codex/skills/sonarqube-analysis/: SKILL.md
.codex/skills/sonarqube-analysis/agents/: openai.yaml
.codex/skills/sonarqube-analysis/scripts/: sonar_report.py
.github/workflows/: lint.yml  markdown.yml  publish.yml  push_docs.yml  regenerate_linux_specs.yml  spec_test.yml
doc/: Makefile  requirements.txt
doc/source/: conf.py  graphviz2drawio.models.rst  graphviz2drawio.mx.rst  graphviz2drawio.rst  index.rst  modules.rst
doc/source/guides/: getting-started.md  how-conversion-works.md  troubleshooting.md
examples/: SmileyFace.dot
graphviz2drawio/: __main__.py  graphviz2drawio.py  version.py
graphviz2drawio/models/: Arguments.py  CoordsTranslate.py  DotAttr.py  Edge.py  Errors.py  GraphObj.py  MxGraph.py  Node.py  NodeFactory.py  Rect.py  SVG.py  Stroke.py  Styles.py  SvgParser.py  Text.py  __init__.py  commented_tree_builder.py
graphviz2drawio/mx/: Curve.py  CurveFactory.py  Edge.py  EdgeFactory.py  GraphObj.py  LinearRegression.py  MxConst.py  MxGraph.py  Node.py  NodeFactory.py  RectFactory.py  Shape.py  Styles.py  Text.py  __init__.py  bezier.py  image.py  utils.py
graphviz2drawio/svg/: CoordsTranslate.py  SvgParser.py  __init__.py
graphviz2drawio/svg/factory/: EdgeFactory.py  FromSvgFactory.py  NodeFactory.py  __init__.py
scripts/: Dockerfile  compare_png.py  compare_render.sh  drawio_export.sh  generate_specs.sh  render_specs.sh  spec_env.sh  test_specs.sh
specs/directed/: Genetic_Programming.xml  Linux_kernel_diagram.xml  Twelve_colors.xml  UML_Class_diagram.xml  bazel.xml  cluster.xml  convnet.xml  crazy.xml  fsm.xml  git.xml  hello.xml  invisible.xml  kennedyanc.xml  lion_share.xml  multilabel.xml  profile.xml  psg.xml  sdh.xml  siblings.xml  subgraph.xml  subgraph_with_tables.xml  switch.xml  tooltip.xml  traffic_lights.xml
specs/gradient/: angles.xml  cluster.xml  colors.xml  datastruct.xml  radial_angle.xml  table.xml
specs/linux/directed/: Genetic_Programming.xml  Linux_kernel_diagram.xml  Twelve_colors.xml  UML_Class_diagram.xml  bazel.xml  cluster.xml  compound.xml  convnet.xml  crazy.xml  datastruct.xml  fsm.xml  git.xml  hello.xml  hello_rect.xml  invisible.xml  kennedyanc.xml  lion_share.xml  multilabel.xml  port.xml  pprof.xml  profile.xml  psg.xml  sdh.xml  siblings.xml  subgraph_multiple.xml  subgraph_with_tables.xml  switch.xml  tooltip.xml  traffic_lights.xml  unix.xml  world.xml
specs/linux/gradient/: angles.xml  cluster.xml  colors.xml  datastruct.xml  g_c_n.xml  linear_angle.xml  table.xml
specs/linux/twopi/: twopi2.xml
specs/linux/undirected/: ER.xml  fdpclust.xml  networkmap_twopi.xml  philo.xml  polylines.xml  process.xml  transparency.xml
specs/mac/directed/: Genetic_Programming.xml  Linux_kernel_diagram.xml  UML_Class_diagram.xml  bazel.xml  cluster.xml  compound.xml  convnet.xml  crazy.xml  datastruct.xml  fsm.xml  git.xml  hello.xml  hello_rect.xml  invisible.xml  kennedyanc.xml  lion_share.xml  multilabel.xml  port.xml  pprof.xml  profile.xml  psg.xml  sdh.xml  siblings.xml  subgraph_multiple.xml  subgraph_with_tables.xml  tooltip.xml  traffic_lights.xml  unix.xml  world.xml
specs/mac/gradient/: angles.xml  cluster.xml  colors.xml  datastruct.xml  g_c_n.xml  radial_angle.xml  table.xml
specs/mac/twopi/: twopi2.xml
specs/mac/undirected/: ER.xml  fdpclust.xml  grid.xml  networkmap_twopi.xml  philo.xml  polylines_curved.xml  process.xml
specs/twopi/: twopi2.xml
specs/undirected/: ER.xml  grid.xml  networkmap_twopi.xml  polylines.xml  polylines_curved.xml  process.xml  softmaint.xml
test/: test_anchor.py  test_bezier.py  test_cli.py  test_compare_png.py  test_curve.py  test_diagrams_generate.py  test_drawio_render_sim.py  test_graph_obj.py  test_graphs.py  test_node_factory.py  test_rect.py  test_sonar_report.py  test_svg.py
test/directed/: Genetic_Programming.gv.txt  Linux_kernel_diagram.gv.txt  Twelve_colors.gv.txt  UML_Class_diagram.gv.txt  bazel.gv.txt  cluster_multi_member.gv.txt  cluster_special_names.gv.txt  compound.gv.txt  convnet.gv.txt  git.gv.txt  grouped_workers.dot  hello.gv.txt  hello_rect.gv.txt  invisible.gv.txt  lion_share.gv.txt  multilabel.gv.txt  port.gv.txt  pprof.gv.txt  psg.gv.txt  shape_path.gv.txt  subgraph.gv.txt  subgraph_multiple.gv.txt  subgraph_with_tables.gv.txt  switch.gv.txt  tooltip.gv.txt
test/gradient/: angles.gv.txt  cluster.gv.txt  colors.gv.txt  datastruct.gv.txt  g_c_n.gv.txt  linear_angle.gv.txt  radial_angle.gv.txt  table.gv.txt
test/undirected/: gd_1994_2007.gv.txt  grid.gv.txt  philo.gv.txt  polylines.gv.txt  polylines_curved.gv.txt  transparency.gv.txt
(+5 files in other folders)
