[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphviz2drawio"
dynamic = ["version"]
description = "Convert graphviz (dot) files into draw.io / lucid (mxGraph) format"
readme = "README.md"
license = "GPLv3"
requires-python = ">=3.10"
authors = [
    { name = "Harold Martin", email = "harold.martin@gmail.com" },
]
keywords = [
    "agraph",
    "conversion",
    "convert",
    "dot",
    "draw",
    "drawio",
    "graph",
    "graphviz",
    "maxgraph",
    "mxgraph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "puremagic",
    "pygraphviz",
    "svg.path",
]

[project.scripts]
graphviz2drawio = "graphviz2drawio.__main__:main"

[project.urls]
"Bug Reports" = "https://github.com/hbmartin/graphviz2drawio/issues"
Homepage = "https://github.com/hbmartin/graphviz2drawio/"
Source = "https://github.com/hbmartin/graphviz2drawio/"

[tool.hatch.version]
path = "graphviz2drawio/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/graphviz2drawio",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "setup.py",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

lint.select = ["ALL"]
lint.ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "D203", "D213", "PLR0913", "S314", "SIM102", "TD002", "TID252", "N999"]
target-version = "py310"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"test/*" = ["ANN001", "ANN201", "E501", "ERA001", "FIX002", "INP001", "PLR2004", "PT011", "S101", "TD003"]
"graphviz2drawio/__main__.py" = ["T201"]
"graphviz2drawio/version.py" = ["T201"]
"doc/source/conf.py" = ["A001", "ERA001", "INP001"]
"graphviz2drawio/mx/Styles.py" = ["C901", "E501", "PLR0911", "PLR0912"]

[tool.pytest.ini_options]
pythonpath = ". venv/lib/python3.12/site-packages"
testpaths = "test"
