[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "graphviz2drawio"
version = "1.2.0"
description = "Convert graphviz (dot) files to draw.io / lucid (mxGraph) format. Beautiful and editable graphs in your favorite editor."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.md"]
authors = [{ name = "Harold Martin", email = "harold.martin@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "graphviz",
    "graph",
    "agraph",
    "dot",
    "convert",
    "conversion",
    "diagrams",
    "drawio",
    "mxgraph",
    "maxgraph",
    "Lucidchart",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["puremagic", "pygraphviz", "svg.path<8.0"]

[project.scripts]
graphviz2drawio = "graphviz2drawio.__main__:main"

[project.urls]
Source = "https://github.com/hbmartin/graphviz2drawio/"
"Bug Reports" = "https://github.com/hbmartin/graphviz2drawio/issues"

[dependency-groups]
dev = ["pytest", "pytest-cov", "diagrams", "ruff", "black", "pillow"]

[tool.uv]
# Hold svg.path at the version previously pinned in requirements.txt;
# 7.x changes coordinate output and would invalidate the spec XMLs.
constraint-dependencies = ["svg-path==6.3"]

[tool.uv.build-backend]
module-root = ""

[tool.pyrefly]
search_path = ["."]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv"]

# Same as Black.
line-length = 88
indent-width = 4

lint.select = ["ALL"]
lint.ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "D203", "D213", "ERA001", "ICN001", "PLR0913", "PT009", "RSE102", "S314", "SIM102", "TD002", "TID252", "N999"]
target-version = "py311"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"test/*" = ["ANN001", "ANN201", "E501", "ERA001", "FIX002", "INP001", "PLR2004", "PT011", "S101", "TD003"]
"graphviz2drawio/__main__.py" = ["T201"]
"graphviz2drawio/version.py" = ["T201"]
"doc/source/conf.py" = ["A001", "ERA001", "INP001"]
"graphviz2drawio/models/commented_tree_builder.py" = ["ANN001", "ANN201", "ANN204"]
"graphviz2drawio/models/SvgParser.py" = ["C901", "PLR0912"]
"scripts/compare_png.py" = ["INP001"]

[tool.pytest.ini_options]
testpaths = "test"
